# MultiSwap-CosmWasm-Contracts

./: Cargo.toml  README.md  test.sh
contracts/fiberrouter-base/: Cargo.toml
contracts/fiberrouter-base/examples/: schema.rs
contracts/fiberrouter-base/src/: contract.rs  msg.rs  state.rs
contracts/fundmanager-base/: Cargo.toml
contracts/fundmanager-base/examples/: schema.rs
contracts/fundmanager-base/src/: contract.rs  msg.rs  state.rs  test.rs
contracts/multiswap-base/: Cargo.toml
contracts/multiswap-base/examples/: schema.rs
contracts/multiswap-base/src/: contract.rs  error.rs  state.rs
