[package]
name = "multiswap-base"
version = "0.0.1"
authors = ["Ferrum Team"]
edition = "2018"
description = "Basic implementation Multiswap"
license = "Apache-2.0"
repository = ""
homepage = ""
documentation = ""

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
multiswap = { path = "../../packages/multiswap", version = "0.14.0" }
cw-storage-plus = { version = "0.14.0" } 
cw-utils = { version = "0.14.0" } 
cosmwasm-std = { version = "1.0.0" }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.20" }
rlp = "0.5"
hex = { version = "0.4"}
sha3 = "0.10"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0" }
